<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login_message">Login</string>
    <string name="login_name">login name</string>
    <string name="password_message">password</string>
    <string name="login_button">Login</string>
    <string name="radioButton_text">RadioButton</string>
    <string name="checkBox_text">CheckBox</string>
    <string name="switch_message">What does this do?</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">TITLE</string>
    <string name="ok">Yes</string>
    <string name="response_message">ListItemsActivity passed: My information to share</string>
    <string name="cancel">No</string>
    <string name="chart_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="weather_check">Weather Forecast</string>
    <string name="fragment_message">Message Here</string>
    <string name="delete_message">DELETE THIS MESSAGE</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_activity_main00">MainActivity00</string>
    <string name="title_activity_main12">MainActivity12</string>


</resources>
